# spyglass

./: .dockerignore  .env.template  .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.dev.template  Makefile.toml  README.md  VERSION.json  docker-compose.yml  package-lock.json  package.json  rustfmt.toml
apps/tauri/: Cargo.toml  Info.plist  package-lock.json  package.json  tauri.conf.json  tauri.dev.conf.json  tauri.rel.conf.json
apps/tauri/capabilities/: desktop.json
apps/tauri/icons/: icon.icns
apps/tauri/src/: cmd.rs  constants.rs  lib.rs  main.rs  menu.rs  rpc.rs  window.rs
apps/tauri/src/cmd/: llm.rs  settings.rs  window.rs
apps/tauri/src/platform/: linux.rs  mac.rs  mod.rs  windows.rs
apps/tauri/src/plugins/: lens_updater.rs  mod.rs  notify.rs  startup.rs
apps/web/: .gitignore  Cargo.toml  Makefile  build.rs  index.html  package-lock.json  package.json  tailwind.config.js
apps/web/.cargo/: config.toml
apps/web/public/: auth.js  gapi.js  main.css  utils.js
apps/web/src/: client.rs  constants.rs  main.rs  metrics.rs  schema.rs  utils.rs
apps/web/src-css/: main.css
apps/web/src/components/: chat_bubble.rs  file_upload.rs  mod.rs  nav.rs
apps/web/src/pages/: chat.rs  create.rs  dashboard.rs  discover.rs  embedded.rs  landing.rs  lens_edit.rs  mod.rs  search.rs
carto/: Cargo.toml
carto/src/: lib.rs  models.rs  robots.rs
carto/src/models/: crawl_queue.rs  fetch_history.rs  mod.rs  resource_rule.rs
carto/tests/: robots_txt_parsing.rs  test_resource_rules.rs
crates/client/: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html  package-lock.json  package.json  tailwind.config.js
crates/client/public/: fixtures.js  glue.js  input.css  main.css  main.scss
crates/client/public/components/: _lenses.scss  _searchbox.scss
crates/client/src/: components.rs  constants.rs  events.rs  main.rs  utils.rs
crates/client/src/components/: btn.rs  forms.rs  icons.rs  lens.rs  mod.rs  result.rs  tag.rs  tooltip.rs  user_action_list.rs
crates/client/src/pages/: admin.rs  ask_clippy.rs  connection_manager.rs  crawl_stats.rs  discover.rs  lens_manager.rs  library.rs  mod.rs  plugin_manager.rs  progress_popup.rs  search.rs  settings.rs  startup.rs  stats.rs  updater.rs  wizard.rs
crates/entities/: Cargo.toml
crates/entities/src/: lib.rs  regex.rs  schema.rs  test.rs
crates/entities/src/models/: bootstrap_queue.rs  connection.rs  crawl_queue.rs  crawl_tag.rs  document_tag.rs  embedding_queue.rs  fetch_history.rs  indexed_document.rs  lens.rs  link.rs  mod.rs  processed_files.rs  resource_rule.rs  tag.rs  vec_documents.rs  vec_to_indexed.rs
crates/migrations/: Cargo.toml
crates/migrations/src/: lib.rs  m20220505_000001_create_table.rs  m20220508_000001_lens_and_crawl_queue_update.rs  m20220522_000001_bootstrap_queue_table.rs  m20220718_000001_add_cols_to_lens.rs  m20220823_000001_migrate_search_schema.rs  m20220917_000001_add_col_to_queue.rs  m20221023_000001_connection_table.rs  m20221031_000001_add_error_column_to_crawl_queue.rs  m20221101_000001_add_open_url_col.rs  m20221107_000001_add_account_col.rs  m20221107_000001_recreate_connection_table.rs  m20221109_add_tags_table.rs  m20221115_000001_local_file_pathfix.rs  m20221116_000001_add_connection_constraint.rs  m20221118_000001_fix_queued_enum.rs  m20221121_000001_add_data_to_crawl_queue.rs  m20221123_000001_add_document_tag_constraint.rs  m20221124_000001_add_tags_for_existing_lenses.rs  m20221210_000001_add_crawl_tags_table.rs  m20230104_000001_add_column_n_index.rs  m20230110_000001_migrate_search_schema.rs  m20230111_000001_add_lens_column.rs  m20230112_000001_migrate_search_schema.rs  m20230126_000001_create_file_table.rs  m20230131_000001_add_is_syncing_to_connection_table.rs  m20230201_000001_add_tag_index.rs  m20230203_000001_add_indexed_document_index.rs  m20230220_000001_remove_legacy_plugins.rs  m20230315_000001_migrate_search_schema.rs  m20241029_000001_add_vector.rs  m20241105_000001_add_embeddings_table.rs  m20241115_000001_embedding_to_indexed_document.rs  m20241119_000001_segment_columns.rs
crates/migrations/src/utils/: migration_utils.rs  mod.rs
crates/reindexer/: Cargo.toml
crates/reindexer/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: accelerator.rs  config.rs  constants.rs  event.rs  form.rs  invoke.rs  keyboard.rs  lib.rs  llm.rs  metrics.rs  plugin.rs  regex.rs  request.rs  response.rs  rpc.rs
crates/shared/src/config/: audio.rs  beta.rs  embeddings.rs  filesystem.rs  user_actions.rs
crates/spyglass/: Cargo.toml
crates/spyglass-clippy/: Cargo.toml
crates/spyglass-clippy/src/: lib.rs
crates/spyglass-lens/: Cargo.toml  README.md
crates/spyglass-lens/src/: lib.rs  pipeline.rs  types.rs  utils.rs
crates/spyglass-llm/: Cargo.toml
crates/spyglass-llm/src/: bin.rs  lib.rs  model.rs  sampler.rs  token_output_stream.rs
crates/spyglass-model-interface/: Cargo.toml
crates/spyglass-model-interface/models/: bert.rs  flash_bert.rs  nomic.rs
crates/spyglass-model-interface/src/: embedding_api.rs  flash_attn.rs  lib.rs
crates/spyglass-plugin/: Cargo.toml  README.md
crates/spyglass-plugin/src/: consts.rs  lib.rs  shims.rs  utils.rs
crates/spyglass-processor/: Cargo.toml
crates/spyglass-processor/src/: lib.rs
crates/spyglass-rpc/: Cargo.toml
crates/spyglass-rpc/src/: events.rs  lib.rs
crates/spyglass-searcher/: Cargo.toml
crates/spyglass-searcher/src/: grouping.rs  lib.rs  query.rs  schema.rs  similarity.rs  stop_word_filter.rs  utils.rs
crates/spyglass/src/: config.rs  fetch.rs  importer.rs  lib.rs  main.rs  metrics.rs  oauth.rs  plugins.rs  state.rs  task.rs
crates/tauri/: Cargo.toml  Info.plist  entitlements.plist  rustfmt.toml  tauri.conf.json
crates/tauri/icons/: icon.icns
crates/tauri/src/: cmd.rs  constants.rs  main.rs  menu.rs  rpc.rs  window.rs
crates/ui-components/: Cargo.toml
crates/ui-components/src/: btn.rs  lib.rs  results.rs
plugins/local-file-indexer/: Cargo.toml
plugins/local-file-indexer/src/: main.rs
src/: api.rs  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  menu.rs
(+282 files in other folders)
