[workspace]
resolver = "2"
members = [
    "crates/*",

    # This requires a .env file to be set up.
    "apps/web",

    # This requires `tauri build` and depends on a few other binaries, so it is not part of the workspace.
    "apps/tauri"
]

# Exclude the crates under `apps/` because they require special steps to be completed before
# they can be built.
default-members = [
    "crates/*"
]

[profile.release]
# codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[profile.sentry]
inherits = "dev"
debug = true
