[workspace]
resolver = "2"
members = [
    "crates/entities",
    "crates/migrations",
    "crates/shared",
    "crates/spyglass",
    "crates/spyglass-lens",
    "crates/spyglass-processor",
    "crates/spyglass-rpc",
    "crates/spyglass-searcher",

    "apps/tauri"
]

[profile.release]
# codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonrpsee = "0.24"
log = "0.4"
reqwest = { version = "0.11.7", features = ["json", "stream", "multipart"] }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"]}
uuid = { version = "1.11.0", features = ["serde", "v4", "v5", "js"], default-features = false }