[package]
name = "carto"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]

[dependencies]
chrono = "0.4"
directories = "4.0.1"
log = "0.4.14"
regex = "*"
reqwest = "0.11.8"
rusqlite = "0.26.1"
tokio = { version = "1", features = ["full"] }
simple_logger = "1.16.0"
url = "2.2.2"