[package]
name = "spyglass-app"
version = "0.1.3"
description = "Personal Search Engine"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
license = ""
repository = ""
default-run = "spyglass-app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
anyhow = { workspace = true }
auto-launch = "0.4.0"
diff-struct = "0.5.1"
jsonrpsee = { version = "0.16.2", features = ["ws-client"] }
log = { workspace = true }
migration = { path = "../../crates/migrations" }
num-format = "0.4"
open = "3"
reqwest = { workspace = true }
ron = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../../crates/shared", features = ["metrics"] }
spyglass-rpc = { path = "../../crates/spyglass-rpc" }
strum = { workspace = true }
strum_macros = { workspace = true }
tauri = { version = "2", features = [ "devtools", "macos-private-api", "tray-icon", "config-json5"] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tokio = "1"
tokio-retry = "0.3"
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std"] }
url = "2.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.39.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
