[package]
name = "spyglass-app"
version = "0.1.3"
description = "Personal Search Engine"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
license = ""
repository = ""
default-run = "spyglass-app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
anyhow = { workspace = true }
auto-launch = "0.4.0"
diff-struct = "0.5.1"
jsonrpsee = { version = "0.16.2", features = ["ws-client"] }
log = { workspace = true }
migration = { path = "../../crates/migrations" }
num-format = "0.4"
open = "3"
reqwest = { workspace = true }
ron = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../../crates/shared", features = ["metrics"] }
spyglass-rpc = { path = "../../crates/spyglass-rpc" }
strum = { workspace = true }
strum_macros = { workspace = true }
tauri = { version = "1.2.4", features = ["api-all", "clipboard", "devtools", "macos-private-api", "notification", "system-tray", "updater"] }
tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link.git", rev = "644046bc08e1066d00fa9be60b46cc6de8f2a901" }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", rev= "6c63c49e29e670343b71fee455e1a6c9145f4a8e" }
tokio = "1"
tokio-retry = "0.3"
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std"] }
url = "2.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.39.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
