[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv_codegen = "0.15.0"
"shared" = { path = "../../crates/shared" }
chrono = { version = "0.4", features = ["serde"] }
console_log = "1.0"
futures = "0.3"
gloo = "0.8.0"
js-sys = "0.3"
log = "0.4"
markdown = "1.0.0-alpha.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = "1.0"
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
ui-components = { path = "../../crates/ui-components" }
url = "2.3"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
serde-wasm-bindgen = "0.5"
uuid = { version = "1.0.0", features = ["v4"], default-features = false }
web-sys = { version = "0.3.60", features = ["History", "Navigator", "VisibilityState"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2"
yew-router = "0.17"