[package]
name = "spyglass-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
log = "0.4"
gloo = "0.8.0"
num-format = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
"shared" = { path = "../shared" }
strum = "0.24"
strum_macros = "0.24"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["VisibilityState"] }
yew = "0.19.3"
yew-router = "0.16"