[package]
name = "spyglass-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
log = "0.4"
gloo = "0.8.0"
handlebars = "4.3.6"
num-format = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
"shared" = { path = "../shared" }
strum = "0.24"
strum_macros = "0.24"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.60", features = ["Navigator", "VisibilityState"] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
ui-components = { path = "../ui-components" }
url = "2.2.2"