[package]
name = "spyglass-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
log = "0.4"
gloo = "0.11.0"
handlebars = "4.3.6"
num-format = { version = "0.4", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.5"
"shared" = { path = "../shared" }
strum = { workspace = true }
strum_macros = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.60", features = ["Navigator", "VisibilityState"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
ui-components = { path = "../ui-components" }
url = "2.2.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(headless)']}