[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
regex = "1"
sea-orm = { version = "0.9", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls", "with-chrono", "with-json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
tantivy = "0.18"
tokio = { version = "1", features = ["full"] }
url = "2.2"

[dev-dependencies]
ron = "0.8"