[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
regex = "1"
rusqlite = {version = "0.32.1", features = ["load_extension"]}
sea-orm = { version = "1.1.0", features = ["macros", "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "with-chrono", "with-json"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
strum = { workspace = true }
strum_macros = { workspace = true }
tantivy_18 = { package="tantivy", version="0.18" }
tantivy = "0.19"
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
url = "2.2"
sqlite-vec = "0.1.3"

[dev-dependencies]
ron = "0.8"

[lib]
name = "entities"
path = "src/lib.rs"
