[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
entities = { path = "../entities" }
log = "0.4"
rayon = "1.5"
sea-orm-migration = { version = "0.11" }
shared = { path = "../shared" }
tantivy = "0.18"
tar = "0.4"
url = "2.3"