[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
entities = { path = "../entities" }
log = { workspace = true }
rayon = "1.5"
sea-orm-migration = { version = "0.11" }
shared = { path = "../shared" }
spyglass-searcher = { path = "../spyglass-searcher" }
tantivy_18 = { package="tantivy", version="0.18" }
tantivy = "0.19"
tar = "0.4"
url = "2.3"