[package]
name = "reindexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
sea-orm = { version = "^0.8", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"], default-features = false }
entities = { path = "../entities" }
shared = { path = "../shared" }
spyglass = { path = "../spyglass" }
tokio = { version = "1", features = ["full"] }
url = "2.2"