[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
directories = "4.0"
# We only need the macros functionality for the shared library
jsonrpsee = { version = "0.15", features = ["macros"] }
log = "0.4"
regex = "1"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
spyglass-lens = { path = "../spyglass-lens" }
url = "2.2"