[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
directories = "4.0"
log = "0.4"
regex = "1"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
spyglass-lens = { path = "../spyglass-lens" }
uuid = { version = "1.0.0", features = ["serde", "v4", "js"], default-features = false }
url = "2.2"
# Dependencies for metrics
chrono = { version = "0.4", features = ["serde"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
metrics = ["dep:chrono", "dep:reqwest"]