[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bitflags = "1.3.2"
diff-struct = "0.5.1"
directories = "4.0"
log = { workspace = true }
regex = "1"
ron = { workspace = true }
num-format = { version = "0.4", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
spyglass-lens = "0.1.7"
uuid = { workspace = true }
url = "2.2"
# Dependencies for metrics
chrono = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
metrics = ["dep:chrono", "dep:reqwest"]