[package]
name = "spyglass-clippy"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Huynh <andrew@spyglass.fyi>"]
description = "A library that uses on-device LLMs to answer questions."
homepage = "https://github.com/spyglass-search/spyglass/tree/main/crates/spyglass-clippy"
repository = "https://github.com/spyglass-search/spyglass/tree/main/crates/spyglass-clippy"
readme = "README.md"
keywords = ["spyglass"]
license = "AGPL"

[dependencies]
llama-rs = { git = "https://github.com/rustformers/llama-rs", rev = "5e0a8fccc6d5ebbc54bf91f49dc42eead64e08f0" }
log = "0.4"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }

[lib]
name = "spyglass_clippy"
path = "src/lib.rs"
crate-type = ["lib"]