[package]
name = "spyglass-lens"
version = "0.1.7"
edition = "2021"
authors = ["Andrew Huynh <andrew@spyglass.fyi>"]
description = "A small library for reading/writing spyglass lens files."
homepage = "https://github.com/spyglass-search/spyglass/tree/main/crates/spyglass-lens"
repository = "https://github.com/spyglass-search/spyglass/tree/main/crates/spyglass-lens"
readme = "README.md"
keywords = ["spyglass", "lens", "lenses"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
blake2 = "0.10.4"
hex = "0.4.3"
regex = "1"
ron = "0.8"
serde = { workspace = true }

[lib]
name = "spyglass_lens"
path = "src/lib.rs"
crate-type = ["lib"]