[package]
name = "spyglass-llm"
version = "0.1.0"
edition = "2021"

[lib]
name = "spyglass_llm"
path = "src/lib.rs"

[[bin]]
name = "spyglass_llm_runner"
path = "src/bin.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokenizers = { workspace = true}
log = { workspace = true }
pretty_env_logger = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
candle = { workspace = true, features = ["metal"]}
candle-nn = { workspace = true, features = ["metal"] }
candle-transformers = {workspace =  true, features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
candle = { workspace = true, features = ["cuda"]}
candle-nn = { workspace = true, features = ["cuda"] }
candle-transformers = {workspace =  true, features = ["cuda"] }
