[package]
name = "spyglass-model-interface"
version = "23.11.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true  }
candle = { version = "*", package = "candle-core", default-features = false }
candle-nn = { version = "*" }
candle-transformers = { version = "*" }
candle-flash-attn = { version = "*", optional = true }
log = "0.4"
nohash-hasher = "0.2.0"
tracing = { workspace = true }
safetensors = "^0.4"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = "^0.9"
simsimd = "5.9.9"
tokenizers = "0.20.1"

[features]
cuda = ["candle/cuda", "candle-nn/cuda"]
