[package]
name = "spyglass-plugin"
version = "0.1.0"
authors = ["Andrew Huynh <andrew@spyglass.fyi>"]
description = "A small client-side library for writing spyglass plugins"
homepage = "https://github.com/a5huynh/spyglass/tree/main/crates/spyglass-plugin"
repository = "https://github.com/a5huynh/spyglass/tree/main/crates/spyglass-plugin"
readme = "README.md"
keywords = ["spyglass", "webassembly", "wasm", "plugins"]
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

[lib]
name = "spyglass_plugin"
path = "src/lib.rs"
crate-type = ["lib"]