[package]
name = "spyglass-processor"
version = "0.1.0"
authors = ["Spyglass <team@spyglass.fyi>"]
description = "Content processing functionality"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytes = "1.2.1"
calamine = "0.19.1"
docx =  { git = "https://github.com/spyglass-search/docx-rs", branch = "master"}
log = { workspace = true }
mime = "0.3.16"
new_mime_guess = "4.0.1"
pdf = "0.8.1"
rubato = "0.12.0"
strum = { workspace = true }
strum_macros = { workspace = true }
symphonia = { version = "0.5.2", features = ["aac", "isomp4", "mp3", "mpa"] }
uuid = { workspace =true, features = ["serde", "v4"], default-features = false }

# Internal spyglass libs
shared = { path = "../shared" }

[lib]
path = "src/lib.rs"
crate-type = ["lib"]