[package]
name = "spyglass-rpc"
version = "0.1.0"
authors = ["Andrew Huynh <andrew@spyglass.fyi>"]
description = "RPC definitions for spyglass server"
edition = "2021"

[dependencies]
serde = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }
shared = { path = "../shared" }

[lib]
name = "spyglass_rpc"
path = "src/lib.rs"
crate-type = ["lib"]