[package]
name = "spyglass-searcher"
version = "0.1.0"
authors = ["Spyglass <team@spyglass.fyi>"]
description = "Search related functionality / utilities for Spyglass"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
chrono = { version = "0.4.23", features = ["serde"] }
fnv = "1.0.7"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["stream", "json"] }
ron = "0.8"
tantivy = "0.19"
thiserror = "1.0"
tracing = "0.1"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"]}
tokio = { version = "1", features = ["full"] }
url = "2.3.1"

# Internal spyglass libs
shared = { path = "../shared" }
uuid = { version = "1.0.0", features = ["serde", "v5"], default-features = false }

[lib]
path = "src/lib.rs"
crate-type = ["lib"]