[package]
name = "spyglass-searcher"
version = "0.1.0"
authors = ["Spyglass <team@spyglass.fyi>"]
description = "Search related functionality / utilities for Spyglass"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.68"
chrono = { workspace = true }
fnv = "1.0.7"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
ron = { workspace = true }
tantivy = "0.19"
thiserror = "1.0"
tracing = "0.1"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"]}
tokio = { version = "1", features = ["full"] }
url = "2.3.1"

# Internal spyglass libs
shared = { path = "../shared" }
uuid = { workspace = true, features = ["serde", "v5"], default-features = false }

[lib]
path = "src/lib.rs"
crate-type = ["lib"]